<resources>
    <string name="app_name">Music Forge</string>
    <string name="action_settings">Settings</string>
    <string name="song_one">Cool song</string>
    <string name="user_one">Roberto</string>
    <string name="caption_one">Aqui está o audio da minha nova música... espero que gostem! Videoclip coming soon! :)</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="donate">Donate</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <string name="my_song_one">Lullaby #1</string>

    <string name="lyrics">Lyrics</string>
    <string name="insert">Insert something...</string>

    <string name="audio">Audio</string>
    <string name="audio_missing">Your song currently has no audio.
    Click the "Add" button to upload files.</string>
    <string name="add">Add</string>
    <string name="next">Next</string>

    <string name="cancel">Cancel</string>
    <string name="pick_comps">Pick the Song Components you wish to share</string>

    <string name="title_activity_my__songs">My Songs</string>

    <string name="profile">Profile</string>
    <string name="my_songs">My Songs</string>
    <string name="settings">Search</string>
    <string name="title_activity_songs">My Songs</string>

    <string name="bio">I enjoy listening to classical music and hitting them with the dab 8) </string>
    <string name="add_file">Add file</string>
    <string name="script">Script</string>
    <string name="video">Videoclip</string>

    <string name="user1">Beethoven</string>
    <string name="user2">Roberto</string>
    <string name="user3">Cláudia</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
